// Autogenerated with StateSmith 0.22.2+0c32be37bf4d4fee5499780a5ef37a7996c192f9.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#nullable enable

namespace FinancialTracker.StateMachines;

// Generated state machine
public partial class SyncClient
{
    public enum EventId
    {
        CONNECTIONCANCELED = 0,
        CONNECTIONFAILED = 1,
        CONNECTIONSUCCESS = 2,
        CONNECTREQUEST = 3,
        DISCONNECTED = 4,
        RECEIVE = 5,
    }

    public const int EventIdCount = 6;

    public enum StateId
    {
        ROOT = 0,
        CONNECTED = 1,
        RECEIVING = 2,
        CONNECTING = 3,
        IDLE = 4,
    }

    public const int StateIdCount = 5;

    // Subtree meta data generation can be disabled in settings.
    // Details: https://github.com/StateSmith/StateSmith/issues/538
    public const int ROOT_SubtreeEndId = 4;  // State 'SyncClient' subtree extends from itself (id: 0) to state 'Idle' (id: 4)
    public const int CONNECTED_SubtreeEndId = 2;  // State 'Connected' subtree extends from itself (id: 1) to state 'Receiving' (id: 2)
    public const int RECEIVING_SubtreeEndId = 2;  // State 'Receiving' subtree extends from itself (id: 2) to state 'Receiving' (id: 2)
    public const int CONNECTING_SubtreeEndId = 3;  // State 'Connecting' subtree extends from itself (id: 3) to state 'Connecting' (id: 3)
    public const int IDLE_SubtreeEndId = 4;  // State 'Idle' subtree extends from itself (id: 4) to state 'Idle' (id: 4)

    // Used internally by state machine. Feel free to inspect, but don't modify.
    public StateId stateId;

    // State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
    public SyncClient()
    {
    }

    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    public void Start()
    {
        ROOT_enter();
        // ROOT behavior
        // uml: TransitionTo(ROOT.<InitialState>)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
            // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.

            // ROOT.<InitialState> behavior
            // uml: TransitionTo(Idle)
            {
                // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `Idle`.
                IDLE_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for ROOT.<InitialState>
        } // end of behavior for ROOT
    }

    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    public void DispatchEvent(EventId eventId)
    {
        switch (this.stateId)
        {
            // STATE: SyncClient
            case StateId.ROOT:
                // No events handled by this state (or its ancestors).
                break;

            // STATE: Connected
            case StateId.CONNECTED:
                switch (eventId)
                {
                    case EventId.RECEIVE: CONNECTED_receive(); break;
                    case EventId.DISCONNECTED: CONNECTED_disconnected(); break;
                }
                break;

            // STATE: Receiving
            case StateId.RECEIVING:
                switch (eventId)
                {
                    case EventId.RECEIVE: CONNECTED_receive(); break; // First ancestor handler for this event
                    case EventId.DISCONNECTED: CONNECTED_disconnected(); break; // First ancestor handler for this event
                }
                break;

            // STATE: Connecting
            case StateId.CONNECTING:
                switch (eventId)
                {
                    case EventId.CONNECTIONSUCCESS: CONNECTING_connectionsuccess(); break;
                    case EventId.CONNECTIONFAILED: CONNECTING_connectionfailed(); break;
                    case EventId.CONNECTIONCANCELED: CONNECTING_connectioncanceled(); break;
                }
                break;

            // STATE: Idle
            case StateId.IDLE:
                switch (eventId)
                {
                    case EventId.CONNECTREQUEST: IDLE_connectrequest(); break;
                }
                break;
        }

    }

    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    private void ExitUpToStateHandler(StateId desiredState)
    {
        while (this.stateId != desiredState)
        {
            switch (this.stateId)
            {
                case StateId.CONNECTED: CONNECTED_exit(); break;

                case StateId.RECEIVING: RECEIVING_exit(); break;

                case StateId.CONNECTING: CONNECTING_exit(); break;

                case StateId.IDLE: IDLE_exit(); break;

                default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
            }
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////

    private void ROOT_enter()
    {
        this.stateId = StateId.ROOT;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CONNECTED
    ////////////////////////////////////////////////////////////////////////////////

    private void CONNECTED_enter()
    {
        this.stateId = StateId.CONNECTED;

        // Connected behavior
        // uml: enter / { OnConnectedEnter(); }
        {
            // Step 1: execute action `OnConnectedEnter();`
            OnConnectedEnter();
        } // end of behavior for Connected

        // Connected behavior
        // uml: enter
        {
            // Step 1: execute action ``
        } // end of behavior for Connected
    }

    private void CONNECTED_exit()
    {
        // Connected behavior
        // uml: exit / { OnConnectedExit(); }
        {
            // Step 1: execute action `OnConnectedExit();`
            OnConnectedExit();
        } // end of behavior for Connected

        // Connected behavior
        // uml: exit
        {
            // Step 1: execute action ``
        } // end of behavior for Connected

        this.stateId = StateId.ROOT;
    }

    private void CONNECTED_disconnected()
    {
        // Connected behavior
        // uml: Disconnected TransitionTo(Idle)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            ExitUpToStateHandler(StateId.ROOT);

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Idle`.
            IDLE_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Connected

        // No ancestor handles this event.
    }

    private void CONNECTED_receive()
    {
        // Connected behavior
        // uml: Receive TransitionTo(Receiving)
        {
            // Step 1: Exit states until we reach `Connected` state (Least Common Ancestor for transition).
            ExitUpToStateHandler(StateId.CONNECTED);

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Receiving`.
            RECEIVING_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Connected

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state RECEIVING
    ////////////////////////////////////////////////////////////////////////////////

    private void RECEIVING_enter()
    {
        this.stateId = StateId.RECEIVING;

        // Receiving behavior
        // uml: enter / { OnReceivingEnter(); }
        {
            // Step 1: execute action `OnReceivingEnter();`
            OnReceivingEnter();
        } // end of behavior for Receiving

        // Receiving behavior
        // uml: enter
        {
            // Step 1: execute action ``
        } // end of behavior for Receiving
    }

    private void RECEIVING_exit()
    {
        // Receiving behavior
        // uml: exit / { OnReceivingExit(); }
        {
            // Step 1: execute action `OnReceivingExit();`
            OnReceivingExit();
        } // end of behavior for Receiving

        // Receiving behavior
        // uml: exit
        {
            // Step 1: execute action ``
        } // end of behavior for Receiving

        this.stateId = StateId.CONNECTED;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CONNECTING
    ////////////////////////////////////////////////////////////////////////////////

    private void CONNECTING_enter()
    {
        this.stateId = StateId.CONNECTING;

        // Connecting behavior
        // uml: enter / { OnConnectingEnter(); }
        {
            // Step 1: execute action `OnConnectingEnter();`
            OnConnectingEnter();
        } // end of behavior for Connecting

        // Connecting behavior
        // uml: enter
        {
            // Step 1: execute action ``
        } // end of behavior for Connecting
    }

    private void CONNECTING_exit()
    {
        // Connecting behavior
        // uml: exit / { OnConnectingExit(); }
        {
            // Step 1: execute action `OnConnectingExit();`
            OnConnectingExit();
        } // end of behavior for Connecting

        // Connecting behavior
        // uml: exit
        {
            // Step 1: execute action ``
        } // end of behavior for Connecting

        this.stateId = StateId.ROOT;
    }

    private void CONNECTING_connectioncanceled()
    {
        // Connecting behavior
        // uml: ConnectionCanceled TransitionTo(Idle)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            CONNECTING_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Idle`.
            IDLE_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Connecting

        // No ancestor handles this event.
    }

    private void CONNECTING_connectionfailed()
    {
        // Connecting behavior
        // uml: ConnectionFailed TransitionTo(Idle)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            CONNECTING_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Idle`.
            IDLE_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Connecting

        // No ancestor handles this event.
    }

    private void CONNECTING_connectionsuccess()
    {
        // Connecting behavior
        // uml: ConnectionSuccess TransitionTo(Connected)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            CONNECTING_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Connected`.
            CONNECTED_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Connecting

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state IDLE
    ////////////////////////////////////////////////////////////////////////////////

    private void IDLE_enter()
    {
        this.stateId = StateId.IDLE;
    }

    private void IDLE_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void IDLE_connectrequest()
    {
        // Idle behavior
        // uml: ConnectRequest TransitionTo(Connecting)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            IDLE_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Connecting`.
            CONNECTING_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Idle

        // No ancestor handles this event.
    }

    // Thread safe. This function can be disabled with `outputStateIdToStringFunction` setting.
    public static string StateIdToString(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return "ROOT";
            case StateId.CONNECTED: return "CONNECTED";
            case StateId.RECEIVING: return "RECEIVING";
            case StateId.CONNECTING: return "CONNECTING";
            case StateId.IDLE: return "IDLE";
            default: return "?";
        }
    }

    // Thread safe. This function can be disabled with `outputEventIdToStringFunction` setting.
    public static string EventIdToString(EventId id)
    {
        switch (id)
        {
            case EventId.CONNECTIONCANCELED: return "CONNECTIONCANCELED";
            case EventId.CONNECTIONFAILED: return "CONNECTIONFAILED";
            case EventId.CONNECTIONSUCCESS: return "CONNECTIONSUCCESS";
            case EventId.CONNECTREQUEST: return "CONNECTREQUEST";
            case EventId.DISCONNECTED: return "DISCONNECTED";
            case EventId.RECEIVE: return "RECEIVE";
            default: return "?";
        }
    }

    // Returns the parent state for a given state. Returns ROOT if input has no parent.
    // Thread safe. This function can be disabled with `outputGetParentIdFunction` setting.
    public static StateId GetParentId(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return StateId.ROOT;
            case StateId.CONNECTED: return StateId.ROOT;
            case StateId.RECEIVING: return StateId.CONNECTED;
            case StateId.CONNECTING: return StateId.ROOT;
            case StateId.IDLE: return StateId.ROOT;
            default: return StateId.ROOT;
        }
    }
}
