@startuml SyncClient

state Idle
state Connecting {
    Connecting: enter / 
    Connecting: exit / 
}
state Connected {
    Connected: enter / 
    Connected: exit / 

    state Receiving {
        Receiving: enter / 
        Receiving: exit / 
    }

    Connected --> Receiving: Receive
}

[*] --> Idle

Idle -> Connecting: ConnectRequest

Connecting --> Connected: ConnectionSuccess
Connecting -left-> Idle: ConnectionFailed 
Connecting -left-> Idle: ConnectionCanceled

Connected -up-> Idle: Disconnected

@enduml